kubernetes/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spongemock
  namespace: apps
spec:
  selector:
    matchLabels:
      app: spongemock
  serviceName: "spongemock"
  replicas: 1
  template:
    metadata:
      labels:
        app: spongemock
    spec:
      volumes:
        - name: spongemock-pvc-storage
          persistentVolumeClaim:
            claimName: spongemock-pvc
      imagePullSecrets:
        - name: ghcr-regcred
      containers:
        - name: spongemock
          image: ghcr.io/thezanke/spongemock:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /app/images
              name: spongemock-pvc-storage
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
