kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spongemock
  namespace: apps
  labels:
    app: spongemock
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: spongemock
