kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spongemock
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: scummy-dev-crt
  rules:
    - host: spongemock.scummy.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spongemock
                port:
                  number: 80
